Initial item layout in index.html

--- a/index.html
+++ b/index.html
@@ -94,6 +94,25 @@
 					</div>
 				</div>
 			</form>
+
+			<form id="items">
+				<div class="row">
+					<div class="small-8 columns itemName">
+						<label for="item-?">
+							<input type="checkbox" name="item-?" id="item-?">
+							?
+						</label>
+					</div>
+
+					<div class="small-2 columns itemQty">
+						?
+					</div>
+
+					<div class="small-2 columns itemType">
+						?
+					</div>
+				</div>
+			</form>
 		</div>
 	</div>
 </body>
