--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="css/app-screen.css" media="screen">
 	<link rel="stylesheet" href="css/app-print.css" media="print">
 	<script src="javascripts/angular.min.js" type="text/javascript" charset="utf-8" async defer></script>
-	<script src="/javascripts/shopping-list.js" type="text/javascript" charset="utf-8" async defer></script>
+	<script src="javascripts/shopping-list.js" type="text/javascript" charset="utf-8" async defer></script>
 </head>
 <body ng-controller="ShoppingListController">
 	<div class="row">
@@ -29,17 +29,29 @@
 
 				<div class="row">
 					<div class="large-8 columns">
-						<input type="text" name="item" placeholder="Item">
+						<input 
+						type="text" 
+						name="item" 
+						placeholder="Item" 
+						ng-model="item"
+						ng-trim="false">
 					</div>
 
 
 					<div class="large-2 columns">
-						<input type="text" name="qty" placeholder="Qty/Weight">
+						<input 
+						type="text" 
+						name="qty" 
+						placeholder="Qty/Weight"
+						ng-model="qty"
+						ng-trim="false">
 					</div>
 
 
 					<div class="large-2 columns">
-						<select name="type">
+						<select 
+						name="type"
+						ng-model="type">
 							<option value="">?</option>
 						</select>
 					</div>
