--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 								</button>
 
 								<button type="button" class="small button alert" ng-click="remove()">
-									<i class="fa fa-time"> Clear Completed</i>
+									<i class="fa fa-times"> Clear Completed</i>
 								</button>
 							</div>
 
@@ -95,7 +95,7 @@
 								</li>
 								<li>
 									<button type="button" class="small button alert" ng-click="remove()">
-										<i class="fa fa-time"></i>
+										<i class="fa fa-times"></i>
 									</button>
 								</li>
 							</ul>
